--- a/user/themes/academydeliver/scss/template/modular/_all.scss
+++ b/user/themes/academydeliver/scss/template/modular/_all.scss
@@ -66,6 +66,10 @@
         position: relative;
         z-index: 10;
 
+        h4 {
+          text-transform: none;
+        }
+
         @include breakpoint(desktop-range) {
             width: 100%;
             float: none;
